[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/Laser.png" type="Texture" id=1]
[ext_resource path="res://Bullet_ammo.gd" type="Script" id=2]
[ext_resource path="res://resources/PixelRPG.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 4
font_data = ExtResource( 3 )

[node name="Bullet_ammo" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Bullet_icon" type="Sprite" parent="."]
position = Vector2( 3.5, 8.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bullet_icon2" type="Sprite" parent="."]
position = Vector2( 6.5, 3.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bullet_icon3" type="Sprite" parent="."]
position = Vector2( 9.5, 8.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_rect" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 2.0
margin_right = 8.0
margin_bottom = 5.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bullet_rect2" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 7.0
margin_right = 11.0
margin_bottom = 10.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bullet_rect3" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 7.0
margin_right = 5.0
margin_bottom = 10.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="."]
margin_left = 14.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}
